syntax = "proto3";

option java_package = "io.anemos.protobeam.examples";
option java_multiple_files = true;

package io.anemos.protobeam.examples;

message ProtoBeamBasicMessage {
    string test_name = 1;
    int32 test_index = 2;
    int32 i32 = 3;
}

